<resources>
    <string name="app_name">My APP Portfolio</string>
    <string name="title">My Proud Applications</string>
    <string name="action_settings">Settings</string>
    <string name="button_1">Popular Movies</string>
    <string name="button_2">Stock Hawk</string>
    <string name="button_3">Build it Bigger</string>
    <string name="button_4">Make Your App Material</string>
    <string name="button_5">Go Ubiquitous</string>
    <string name="button_6">Capstone</string>

</resources>
