<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false">

    <TextView android:text="@string/title"
        android:id="@+id/titleTextViewiew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:paddingBottom="20dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_1"
            android:id="@+id/button1"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:onClick="popularMovieAction" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_2"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:onClick="stockHawkAction" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_3"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:onClick="builditbiggerAction" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_4"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:onClick="makeMaterialAction" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_5"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:onClick="goUbiquitousAction" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_6"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:onClick="capstoneAction" />
    </LinearLayout>

</LinearLayout>